2019/05-kubernetes-dashboard-gitlab/manifests/kube-dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/sign_in
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
  name: external-auth-oauth2
  namespace: kube-system
spec:
  rules:
  - host: ##DASHBORD_URL##
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
  tls:
  - hosts:
      - ##DASHBORD_URL##
    secretName: kubernetes-dashboard-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: oauth2-proxy
  namespace: kube-system
spec:
  rules:
  - host: ##DASHBORD_URL##
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
  tls:
  - hosts:
      - ##DASHBORD_URL##
    secretName: kubernetes-dashboard-tls
